--- a/mgussegdlet/app/src/main/assets/index2.html
+++ b/mgussegdlet/app/src/main/assets/index2.html
@@ -27,26 +27,26 @@
         <table id="table1" width="100%">
             <td colspan="2">
                 <div style="font-size: 12px;">
-                    <button id="gomb" onclick="location.href='index.html';">Karakterkészítő</button>
+                    <button id="gomb" onclick="location.href='index.html';"><h4>Karakterkészítő</h4></button>
                 </div>
 
                 <div style="font-size: 12px;">
-                    <button class="buttons" id="vilagbutton" onclick="location.href='vilag.html';">Világ</button>
-
-                </div>
-
-                <div style="font-size: 12px;">
-                    <button class="buttons" id="kasztokbutton" onclick="location.href='kasztok.html';">Kasztok</button>
+                    <button class="buttons" id="vilagbutton" onclick="location.href='vilag.html';"><h4>Világ</h4></button>
 
                 </div>
 
                 <div style="font-size: 12px;">
-                    <button class="buttons" id="fajokbutton" onclick="location.href='fajok.html';">Fajok</button>
+                    <button class="buttons" id="kasztokbutton" onclick="location.href='kasztok.html';"><h4>Kasztok</h4></button>
 
                 </div>
 
                 <div style="font-size: 12px;">
-                    <button class="buttons" id="egyebbutton" onclick="location.href='egyeb.html';">Egyéb</button>
+                    <button class="buttons" id="fajokbutton" onclick="location.href='fajok.html';"><h4>Fajok</h4></button>
+
+                </div>
+
+                <div style="font-size: 12px;">
+                    <button class="buttons" id="egyebbutton" onclick="location.href='egyeb.html';"><h4>Egyéb</h4></button>
 
                 </div>
 
@@ -54,8 +54,7 @@
 
     </div>
 
-
-    <table></table>
+  
 
     <script src="script2.js"></script>
 </body>
