--- a/mgussegdlet/app/src/main/assets/vilag.html
+++ b/mgussegdlet/app/src/main/assets/vilag.html
@@ -55,6 +55,7 @@
                         <option value="erigow">Erigow</option>
                         <option value="ilanor">Ilanor</option>
                         <option value="tiadlan">Tiadlan</option>
+                        <option value="dwyll">Dwyll Unió</option>
 
 
                     </select>
@@ -75,6 +76,7 @@
     <button class="mapbutton" id="erigow" onclick="erigow()"></button>
     <button class="mapbutton" id="ilanor" onclick="ilanor()"></button>
     <button class="mapbutton" id="tiadlan" onclick="tiadlan()"></button>
+    <button class="mapbutton" id="dwyll" onclick="dwyll()"></button>
 
 
     <img src="htmlmedia/ynev_poszter_lowres.jpg" alt="">
