mentés betöltés megoldva! (legalábbis nagyjából

--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -19,6 +19,8 @@
                     <button onclick="location.href='index2.html';" style="background-color: white; border-width: 1px; border-radius: 3px; padding: 4px;">Töredékek</button>
                     <button onclick="location.href='index.html';" style="background-color: white; border-width: 1px; border-radius: 3px; padding: 4px;">Karakterkészítő</button>
                     <button onclick="ismerteto()" style="background-color: white; border-width: 1px; border-radius: 3px; padding: 4px;">Ismertető</button>
+                    <button onclick="save()" style="background-color:yellow; border-width: 1px; border-radius: 3px; padding: 4px;">Mentés</button>
+                    <button onclick="load()" style="background-color:limegreen; border-width: 1px; border-radius: 3px; padding: 4px;">Betöltés</button>
                 </div>
             </td>
         </tr>
