--- a/mgussegdlet/app/src/main/assets/dwyll.html
+++ b/mgussegdlet/app/src/main/assets/dwyll.html
@@ -14,6 +14,47 @@
     
     A dwoonok országa és népe furcsa zárványt alkot Észak-Yneven. A hatalmas kontinens ezen részére a mai napig rányomja bélyegét a kyr örökség. 
     Északi és déli szomszédai egyaránt ennek bűvöletében élnek, Toron ennek nevében visel pusztító háborúkat az Északi Szövetség ellen, és annak legnagyobb befolyással rendelkező tagja, Erigow, ennek nevében tagadja meg a toroni követeléseket. 
-
+    A dwoonok ereiben nem folyik egy cseppnyi kyr vér sem, múltjukat semmi sem köti össze Kyriával, vallásuk teljesen idegen a kyr és pyarroni hittől, mégis állást kellett foglalniuk az Északot feldúló háborúkban, hogy ne tűnjenek el a történelem süllyesztőjében. 
+    A dwoonok a Hetedkor hajnalán, a Pyarronn szerinti negyedik évszázadban érkeztek a mai Dwyll Unió földjére; múltjukat maguk mögött hagyták, csupán hitüket, Ranil imádatát hozták magukkal mára elfelejtett őshazájukból. 
+    A fejlettebb dwoonok hamar legyűrték a területet lakó civilizálatlan néptörzsek ellenállását, és kiépítették országukat. 
+    Az újdonsült ország hamarosan megtapasztalhatta déli szomszédja barátságtalan természetét. A Családi Háborúk káoszából kilábaló, egymást követő császárai alatt egyre jobban megerősödő Toron elérkezettnek látta az időt arra, hogy újból Kyria zászlaja alatt egyesítse Északot - azonban a valamikori Enrawell felé vezető utat egy erős, számukra idegen állam zárta el, amely meglepően hatékonyan védekezett támadásai ellen. 
+    A két fél véres háborúkat vívott egymással, de a híres dwoon nyakasság és harciasság önmagában valószínűleg nem lett volna elegendő Toron megállítására. Az egész Észak-Ynevet legyűrni kívánó birodalom fokozatosan teret nyert, egyre északabbra szorította a dwoonokat, és egy hadjárat során az akkori dwoon főváros, Tiarnel is elbukott, az ország királya és a trón örökösei pedig mind egy szálig elestek a város védelmében. 
+    A tragédia nem törte meg a dwoonokat; tovább folytatták a harcot, visszaverték a toroni csapatokat, és miután a különböző lovagrendek nem tudtak megegyezni az új király személyéről, a Ranil-lovagrend nagymesterére ruházták a régensi hatalmat. 
+    Ebben az időben kezdődött meg a déli erődrendszer kiépítése, amit ma Sárkánygerinc néven ismernek szerte Yneven. 
+    A fokozódó toroni támadásoktól sújtott dwoonoknak az Északi Szövetség nyújtott segítő kezet. Az erigowi s ereni segédcsapatok segítségével a Dwyll Unió hatékonyan verte vissza az újabb toroni hódítási kísérleteket, és P.sz. 1687-re olyan szintre fejlődtek a baráti kapcsolatok, hogy az Unió csatlakozott az Északi Szövetséghez. Azóta fontos szerepet játszik az egymást követő Zászlóháborúkban seregei - különösen nehézlovassága és gyalogsága - felbecsülhetetlen értékűek a Szövetség számára. 
+    A sárkánygerinc ekkoriban nyerte el mai formáját; az erődépítés mestereinek számító dwoonokat törpe építészek segítették. Talán ennek tudható be, hogy Toron a mai napig képtelen volt megbirkózni az erődrendszerrel, csupán egyes részeit sikerült időlegesen elfoglalnia. 
+    Mindez a valóban impozáns erődítmények mellett a Naptornyoknak is köszönhető, melyeket Ranil felkentjei emeltek istenük dicsőségére - no meg a határ védelmére. 
+    Mágikus természetükhöz nem férhet kétség; nyers erővel lehetetlen őket megsemmisíteni, és a varázslatokkal szemben is rendkívül ellenállóak. 
+    Ranil papjait uruk félelmetes hatalommal ruházza fel e helyeken. 
+    Mindemellett a dwoonok megmaradtak zárkózott, maguknak való népnek, nem kérnek északi szomszédaik kultúrájából. 
+    A pyarronita vallás és értékrend térhódítása kívül maradt az Unió határain, itt csak Ranil templomokkal és az ő hitét valló emberekkel találkozhat a látogató, aki jobban teszi, ha nem veri nagydobra a dwoonokétól eltérő vallási meggyőződését. 
+    A dwoonokat és a törpéket erős baráti szálak kötik össze; egyes rossznyelvek szerint valójában jobban kedvelik őket, mint északi szomszédaikat, Erigow büszke (és a dwoonok szerint kifejezetten gőgös) népét. 
+    A kiemelkedően tehetséges dwoon építőmérnökök némelyike Tarinba is eljut, és ott tanulmányozza a kövek tutkait. 
+    Persze, a föld alatt húzódó törpe birodalomban nem töltenek túl sok időt; az embernépek elmjük épségével fizethetnek a huzamosabb tarini tartózkodásért, és ez alól a dwoonok sem kivételek. 
+    Az Unió fővárosa Davalon, Észak-Ynev egyik legjobban megerősített települése. Bár már több Zászlóháborúban sor került ostromára, a toroniak nem boldogultak a hatalmas falakkal, amelyek felépítésében Tarin törpéinek is része volt. 
+    Az ország földjei termékenységükről híresek, ennek köszönhetően mezőgazdasági szempontból a Dwyll Unió önellátó. 
+    Az ország csupán néhány nyersanyagból és luxuscikkből szorul behozatalra, ezek ára az eget veri. <br><br>
+    <h2>Államszervezet</h2><br>
+    Névlegesen királyság, valójában a Ranil-lovagrend mindenkori nagymestere gyakorolja a hatalmat, aki egyben a Hetedik Vörös Hadúr. 
+    Eme tisztséget jelen pillanaban Ral da Ranga, a XIV. Zászlóháború hőse birtokolja.
+    Egy ősi prófécia szerint egy nap maga Ranil fogja kijelölni a jogos uralkodót, eddig tart a régensi uralom. 
+    Az országban több különböző lovagrend található, amelyek az egyes tartományok felett bírnak befolyással. A legfontosabbak a Ranil-lovagrend mellett a Szent Tűz, Arany Sugár, Sasok lovagja, és az Igaz Akarat. 
+    Eme rendek mindegyike elfogadja a Ranil-lovagrend elsőbbségét, ámbár az utóbbi években egyes hírek szerint az Igaz Akarat-rend nagymestere, a nagyravágyó Imrym Dall komoly kritikával illette ezt a berendezkedést, és az sem kizárt, hogy maga kíván az Unió vezetője lenni. 
+    Az ország nemessége túlnyomó többségében egy-egy lovagrend tagja, alattuk a nemtelen szabadok foglalnak helyet, kik saját maguk rendelkeznek földjeikkel. Háborúk idején ők is fegyvert ragadnak az ország védelmében, ők alkotják a dwoon gyalogság gerincét. <br><br>
+    <h2>Hétköznapi élet</h2><br>
+    A Dwyll Unió lakóinak életére nagy hatást gyakorolnak az egymást követő háborúskodások. A Zászlóháborúk során az Unió földje a legfőbb hadszíntér, az ország területének jelentős része többször állt már évekig a Fekete Hadurak uralma altt. 
+    Ennek megfelelően az Unióban mindenütt erős várakat találhatunk, és a nép megtanulta, hogy védje meg magát, és kezdje újra életét, ha ellenséges csapatok égetik fel házaikat. 
+    Mindez még fokozottabban igaz a Pidera lábainál húzódó határvidék lakóira.
+    Nem fordul elő olyan évtized, hogy Toron ne indítson kisebb hadjáratokat erre, csupán azért, hogy seregeit gyakorlatoztassa, és a Pidera hegységben élő ork törzsek is rendszeresen át-átcsapnak a határon. Hogy az időt múlassák, mondják ők, és ez a dwoonok számára felégetett falvakat, lemészárolt, avagy rabszolgának elhurcolt embereket jelent. 
+    Ennek megfelelően az itt található települések mindegyikét erődítések veszik körül, melyek többnyire elegendőek a kisebb portyázó csapatok elriasztásához. Nagyobb vész esetén a Sárkánygerinc erődítményei fogadják be a környék lakosságát. 
+    A déli tartományokból kerülnek ki a legvitézebb dwoon harcosok, eme tájegység seregei a Fekete Hadurak legádázabb és legveszélyesebb ellenségei közé tartoznak. 
+    A nehéz körülmények ellenére az ország lakói barátságos, vendégszerető népek. Az idegeneket kissé bizalmatlanul kezelik, ám ha a szívükbe fogadták őket, akkor senki sem kívánhat magának igazabb barátot egy dwoonál. Többnyire erős testfelépítésű, barna vagy mézszőke hajú emberek. 
+    A nemtelen szabadok ruházkodása leginkább visszafogottként jellemezhető. Kedvelik a sötét, avagy pasztell árnyalatú praktikus ruhadaraboka, gyakori öltözék a cserzett bőrzeke, vastag posztónadrág és köpeny. 
+    A nemesek ruházata díszes, tobzódik a különféle színekben: sárga, vörös, lila, mind előfordul a finom selyemruhákon. 
+    Az ország hivatalos nyelve a dwoon, ezen kívül meglehetősen sokan ismerik és beszélik az ervet és az ilanorit. A szerncsésebb utzók ég a közöst törő dwoonokkal is találkozhatnak. <br><br>
+    <h2>Törvények és közbiztonság</h2><br>
+    A közbiztonság átlagosnak mondható. A törvények szigorúak, a lovagrendek mindent megtesznek betartásuk érdekében . A félreeső részeken mindemellett előfordulhatnak rablók, és az ország déli határvidéke kifejezettn veszélyesnek számít. <br><br>
+    <h2>Vallás</h2><br>
+    Az Unióban csupán Ranilnak emelt templomokkal lehet találkozni. A dwoonok tisztelik mások vallási meggyőződését egészen addig, amíg azt megtartják maguknak. 
 </body>
 </html>
