style-ok az országokhoz OK

--- a/mgussegdlet/app/src/main/assets/eren.html
+++ b/mgussegdlet/app/src/main/assets/eren.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="stylesheet" href="orszagok.css">
     <title>Document</title>
 </head>
 <body style="text-align: justify; color: white; background-color: lightblue; margin-left: 12px; margin-right: 12px; background-image: url('htmlmedia/backback.jpg'); background-repeat: no-repeat; background-size: 320%; overflow:scroll; background-attachment: fixed; backdrop-filter: blur(2px); padding: 1px;">
