--- a/mgussegdlet/app/src/main/assets/doran.html
+++ b/mgussegdlet/app/src/main/assets/doran.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="orszagok.css">
     <title>Document</title>
 </head>
 
 <body
-    style="text-align: justify; color: white; background-color: lightblue; margin-left: 12px; margin-right: 12px; background-image: url('htmlmedia/backback.jpg'); background-repeat: no-repeat; background-size: 320%; overflow:scroll; background-attachment: fixed; backdrop-filter: blur(2px); padding: 1px;">
+    style="text-align: justify; color: white; background-color: lightblue; margin-left: 12px; margin-right: 12px; background-image: url('htmlmedia/backback.jpg'); background-repeat: no-repeat; background-size: 320%; overflow:scroll; background-attachment: fixed; backdrop-filter: blur(2px); padding: 1px; ">
     <button onclick="location.href='vilag.html';"
         style="width: 100%; font-size: 14px; opacity: 0.6; padding: 8px; border-radius: 4px; border: 1px;">Világ</button>
         <h1 style="background-color: grey; text-align: center; border-radius: 4px;">Doran</h1>
