--- a/mgussegdlet/app/src/main/assets/riegoy.html
+++ b/mgussegdlet/app/src/main/assets/riegoy.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="orszagok.css">
+
     <title>Document</title>
 </head>
 <button onclick="location.href='vilag.html';" style="width: 100%; font-size: 14px; opacity: 0.6; padding: 8px; border-radius: 4px; border: 1px;">Világ</button>
