--- a/mgussegdlet/app/src/main/assets/index2.html
+++ b/mgussegdlet/app/src/main/assets/index2.html
@@ -12,12 +12,9 @@
 <body>
 
 
-    <video autoplay muted loop id="myVideo" class="video1">
-        <source src="htmlmedia/diablo4.mp4">
+    <video autoplay muted loop id="myVideo" class="video1" src="htmlmedia/intro1_trial_0.mp4">      
     </video>
-    <script> /* ez a video scriptje!!! */
-        document.getElementById("myVideo").currentTime = 73;
-    </script>
+   
 
 <center>
     <audio src="htmlmedia/theme2.mp3" id="audio1" loop autoplay controls></audio>
