--- a/mgussegdlet/app/src/main/assets/index2.html
+++ b/mgussegdlet/app/src/main/assets/index2.html
@@ -17,7 +17,7 @@
    
 
 <center>
-    <audio src="htmlmedia/theme2.mp3" id="audio1" loop autoplay controls></audio>
+    <audio src="htmlmedia/theme2.mp3" id="audio1" loop autoplay></audio>
 </center>
 
     <div id="body">
