zene add meg egy-két apróság

--- a/magusd203/app/src/main/assets/index.html
+++ b/magusd203/app/src/main/assets/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Shalimar&display=swap" rel="stylesheet">    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Shalimar&display=swap" rel="stylesheet">
+    <title>Document</title>
 </head>
+
 <body>
+    <audio src="musics/Rome Total War - Rome Total War Original Soundtrack - Jeff van Dyck.mp3" autoplay loop></audio>
+
     <div id="indexbuttonsdiv">
         <button class="mainbuttons">Ynev fajai</button>
         <button class="mainbuttons">Kasztok</button>
@@ -20,6 +25,7 @@
         <button class="mainbuttons">Karakter készítő </button>
         <button class="mainbuttons">Súgó</button>
     </div>
-<img src="pictures/TeaMadarEsFurdohaz.jpg" alt="" id="bodybackground">
+    <img src="pictures/TeaMadarEsFurdohaz.jpg" alt="" id="bodybackground">
 </body>
+
 </html>
