--- a/magusd203/app/src/main/assets/index.html
+++ b/magusd203/app/src/main/assets/index.html
@@ -14,7 +14,7 @@
     <audio src="musics/Rome Total War - Rome Total War Original Soundtrack - Jeff van Dyck.mp3" autoplay loop></audio>
 
     <div id="indexbuttonsdiv">
-        <button class="mainbuttons">Ynev fajai</button>
+        <button class="mainbuttons" onclick="fajok()">Ynev fajai</button>
         <button class="mainbuttons">Kasztok</button>
         <button class="mainbuttons">Képességek</button>
         <button class="mainbuttons">Képzettségek</button>
@@ -22,10 +22,12 @@
         <button class="mainbuttons">Varázslatok</button>
         <button class="mainbuttons">Papi mágia</button>
         <button class="mainbuttons">Satralis</button>
-        <button class="mainbuttons">Karakter készítő </button>
+        <button class="mainbuttons">Karakter generátor</button>
         <button class="mainbuttons">Súgó</button>
     </div>
+
     <img src="pictures/TeaMadarEsFurdohaz.jpg" alt="" id="bodybackground">
+    <script src="index.js"></script>
 </body>
 
 </html>
