--- a/magusd203/app/src/main/assets/index.html
+++ b/magusd203/app/src/main/assets/index.html
@@ -14,7 +14,7 @@
     <audio src="musics/Rome Total War - Rome Total War Original Soundtrack - Jeff van Dyck.mp3" autoplay loop></audio>
 
     <div id="indexbuttonsdiv">
-        <button class="mainbuttons" onclick="fajok()">Ynev fajai</button>
+        <button class="mainbuttons" onclick="location.href='fajok.html';">Ynev fajai</button>
         <button class="mainbuttons">Kasztok</button>
         <button class="mainbuttons">Képességek</button>
         <button class="mainbuttons">Képzettségek</button>
@@ -22,6 +22,7 @@
         <button class="mainbuttons">Varázslatok</button>
         <button class="mainbuttons">Papi mágia</button>
         <button class="mainbuttons">Satralis</button>
+        <button class="mainbuttons">Istenek</button>
         <button class="mainbuttons">Karakter generátor</button>
         <button class="mainbuttons">Súgó</button>
     </div>
