--- a/magusd203/app/src/main/assets/fajok.html
+++ b/magusd203/app/src/main/assets/fajok.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="fajok.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
-    ez a fajok oldala
 
-    
+<body>
+    <h1>Fajok</h1>
+
+
+<div id="pickture">
+<img src="pictures/fajok.jpg" alt="">
+</div>
+
 </body>
+
 </html>
