--- a/magusd203/app/src/main/assets/istenek.html
+++ b/magusd203/app/src/main/assets/istenek.html
@@ -5,8 +5,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="fajok.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <div id="menudiv">
+        <select name="" id="menuselector" onchange="menuselector()">
+            <option value="menu">Menü</option>
+            <option value="home">Home</option>
+            <option value="fajok">Ynev fajai</option>
+            <option value="kasztok">Kasztok</option>
+            <option value="kepessegek">Képességek</option>
+            <option value="kepzettsegek">Képzettségek</option>
+            <option value="pszi">Pszi</option>
+            <option value="varazslatok">Varázslatok</option>
+            <option value="papimagia" >Papi mágia</option>
+            <option value="satralis" >Satralis</option>
+            <option value="istenek">Istenek</option>
+            <option value="kargen" >Karakter készítő</option>
+            <option value="sugo">Súgó</option>
+        </select>
+    </div><br><br>
+
     
+    </div>
+        <h1>Istenek</h1>
+    </div>
+
+
+    <div id="text">
+
+        <h2>Elf</h2>
+
+        Along with width and height, CSS containers also have an overflow property that can be used for image cropping.
+        To activate the overflow property enclose the image, within a div of a particular width and height, and set
+        overflow:hidden. This will ensure that the base container will retain its structure, and any image overflow will
+        be hidden behind the container.
+
+        Finally, the margin property is used on the image to adjust the cropped area. This property takes four values.
+        However, only the first and last of the four values are essential as they represent the pixels from the top, and
+        the left, respectively.
+
+        Consider the example below; it​ uses the same 480
+        480
+        x 240
+        240
+        image of a puppy. Experiment with the values of width, height and margin, note the output:
+        A M.A.G.U.S. egy, az 1993-as, első kiadása óta nagy magyarországi népszerűségnek örvendő, magyar fejlesztésű
+        szerepjáték a Valhalla Páholy gondozásában. Többször átdolgozott és kiegészítőkkel bővült játékrendszere a 100
+        oldalú (fiktív) dobókockára (röviden: k100) épül, eltekintve a 20 oldalút használó 2004-es kiadású Alapkönyvtől.
+        Az egyebek között emberek, orkok, törpék és elfek lakta komplex fantáziavilága, Satralis, azon belül is
+        elsősorban Ynev számos – a játékot támogató céllal íródott – regényben és novellában köszön vissza. Társas és
+        gyűjtögetős kártyajáték változata is készült.
+
+        A M.A.G.U.S. karaktereinek leírására négy fő sablont használ: minden játékos karakternek van kasztja, faja,
+        jelleme és kora; ezekből vezethetőek le a karakter számszerűsíthető értékei és alapvető beállítottsága. Ezt
+        árnyalja tovább az úgynevezett előtörténet, amely a karakter eddigi életútját foglalja össze, leírja családi
+        környezetét, pátriáját és megtalálhatóak benne azon sorsdöntő események, amelyek egy adott kaszt és jellem felé
+        terelték személyiségét. Ezt alapvetően játékos írja meg és a kalandmester azt jóváhagyja vagy – hogy a játék
+        egyensúlyát megtartsa – javításokat eszközöltet rajta. Különleges esetekben az előtörténet bizonyos eseményeit a
+        kalandmester lejátszatja a játékossal, mielőtt az használatba vehetné karakterét. Az olyan játékmódokban, ahol
+        az előtörténet a harcközpontúság miatt annyira nem hangsúlyos, annak megírásától a kalandmesterek és a játékosok
+        általában eltekintenek; ilyenek például a viadal- és gladiátorjátékok. A hosszú játékokban azonban fontos
+        szerepet kap a személyiség és az emberi kapcsolatok, így az előtörténet nem elhagyható. Az úgynevezett
+        életút-játék karakterei a szokásosnál jóval összetettebbek, leírásuk több tíz, esetenként száz oldal – egy
+        átlagos történet azonban nem több 2-8 oldalnál. Az előtörténetnek szigorúan része a karakter kora: a leírt
+        életútnak arányban kell azzal állnia. A rendszer öt életkorszakot különböztet meg, s a felnőtt kivételével mind
+        módosító hatással van a karakter játéktulajdonságaira.
+
+        A karakter számszerűsíthető értékeinek meghatározása – a képzettségek kivételével – a karakteralkotás folyamán
+        kockadobásokkal történik.
+
+
+
+    </div>
+
+
+    <script src="fajokscript.js"></script>
+
 </body>
 </html>
