--- a/magusd203/app/src/main/assets/fajok.html
+++ b/magusd203/app/src/main/assets/fajok.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fajok.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
+
     <title>Document</title>
 </head>
 
@@ -30,8 +31,7 @@
         </select>
     </div><br><br>
 
-
-    </div>
+    </div id="text">
     <h1>Fajok</h1>
     </div>
 
@@ -39,9 +39,6 @@
     <div id="text">
 
         <div id="humandiv">
-            <div>
-                <h3>Ember</h3>
-            </div>
 
             <div style="text-indent: 1em;">
                 <i>
@@ -56,14 +53,18 @@
                 Az emberek és ezen fajok közt élénk kapcsolatok szövődnek kontinens szerte, legyen szó akár gazdasági,
                 kultúrális kötelékekről.  
                 </i>  
-            </div><br>
+            </div>
+
+            <div>
+                <h3>Ember</h3>
+            </div>
 
             <div>
                 <p style="text-indent: 1em;"> Az emberi faj nem öröktől fogva lakja Ynev földjét, pontos eredetükről még
                     a legbölcsebbek is csak ködös taláálgatásokba bocsátkozhatnak.
                     A dorani magiszterek szerint az emberiség első feltűnése a Harmadkorra tehető, amikor is egy Cranta
                     nevű emberi birodalom nőtt ki a Fajháborúk káoszából.
-                    Egyes délvidéki történészek szerint azonban az emberek faja Dél-Yneven bukkant fel először.</p><br>
+                    Egyes délvidéki történészek szerint azonban az emberek faja Dél-Yneven bukkant fel először.</p>
                 <p style="text-indent: 1em;">
                     Az azóta eltelt viharos évezredek majd' minden ősi fajnak hanyatlást hoztak. A rettegett aquirok a
                     túlélésért küzdenek a kontinens félreeső szegleteiben, az elfek büszke népe mára hatalmának és
@@ -75,14 +76,14 @@
                     társadalom lenne meghatározó, a szolgákból urak lettek, járjunk akár Erigow büszke városában, avagy
                     a Taba el-Ibara homokján.
                 </p>
-                <br>
+                
                 <p style="text-indent: 1em;">
                     Gyorsan tanulnak, és képesek is az elsajátított tudást a javukra fordítani.
                     Az ősi kontinens szemtanúja volt, ahogy a megalázó szolgaszerepből (Démonikus Ó-Birodalom)
                     felemelkedve egész Ynevet áthatotta országaik (legyen az a Pyarroni Államközösség, avagy az Északi
                     Szövetség) szelleme.
                 </p>
-                <br>
+               
                 <p style="text-indent: 1em;">
                     Ahány vidék, annyi fajta ember; ez a faj az, amely a leginkább változékony és rugalmas, amely a
                     legtöbb tudást fogadta magába az ősibb és bölcsebb népektől. Vannak helyek, hol elfek vére kering
@@ -93,8 +94,7 @@
                     teljesen idegen kultúráikat; az egyes emberi társadalmakról csak külön-külön érdemes beszélni, hisz
                     az embernépek számtalan vizsgálója tanúsíthatja, hogy az emberiség jellemzésekor nem célravezetőek
                     az általánosítások.
-                </p>
-                <br>
+                </p>              
             </div>
         </div>
 
